# claude-relay

./: .gitignore  README.md  claude-relay.service  pyproject.toml  requirements.txt
claude_proxy/: __init__.py  __main__.py  backend.py  config.py  convert_request.py  convert_stream.py  image_agent.py  normalize.py  server.py  sse.py
claude_relay/: __init__.py  __main__.py  backend.py  config.py  convert_request.py  convert_stream.py  image_agent.py  server.py  sse.py
scripts/: diagnose_tool_calls.py
tests/: test_backend.py  test_compat.py  test_config.py  test_convert_request.py  test_convert_stream.py  test_debug_rotation.py  test_image_agent.py  test_server.py  test_sse.py
